--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title> Isadora Muller </title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1><pre>			 Portifolio					</pre></h1>
+<p>Welcome to Isadora's Portifolio website. Here you will find all types of information on projects,
+ skills and previous work that she has participated in.</p>
 </body>
 </html>
