dowload pdf test

--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 <h1><pre>			 Portifolio					</pre></h1>
 <p>Welcome to Isadora's Portifolio website. Here you will find all types of information on projects,
  skills and previous work that she has participated in.</p>
+ 
+ 
+ <h3> Resume </h3>
+ <a href="resume.pdf" download="IsadoraMuller_resume">Download the pdf</a>
 </body>
 </html>
