--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  skills and previous work that she has participated in.</p>
  
  
- <h3> Resume </h3>
+ <h3> Resume download testing </h3>
  <a href="resume.pdf" download="IsadoraMuller_resume">Download the pdf</a>
 </body>
 </html>
