--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title> Isadora Muller </title>
-</head>
 <body>
-<h1><pre>			 Portifolio					</pre></h1>
-<p>Welcome to Isadora's Portifolio website. Here you will find all types of information on projects,
- skills and previous work that she has participated in.</p>
+<h1><center>Isadora Luiza Muller</center></h1>
+<p><center>Welcome to Isadora's Portifolio website. Here you will find all types of information on projects,
+ skills and previous work that she has participated in.</center></p>
  
  
- <h3> Resume download testing </h3>
+ <h3> Resume download</h3>
  <a href="resume.pdf" download="IsadoraMuller_resume">Download the pdf</a>
 </body>
 </html>
