--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+<link rel="stylesheet" href="stylesheet.css">
+</head>
+
 <body>
 <h1><center>Isadora Luiza Muller</center></h1>
 <p><center>Welcome to Isadora's Portifolio website. Here you will find all types of information on projects,
