--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 <link rel="stylesheet" href="stylesheet.css">
@@ -7,11 +7,12 @@
 
 <body>
 <h1><center>Isadora Luiza Muller</center></h1>
+
 <p><center>Welcome to Isadora's Portifolio website. Here you will find all types of information on projects,
  skills and previous work that she has participated in.</center></p>
  
  
  <h3> Resume download</h3>
- <a href="resume.pdf" download="IsadoraMuller_resume">Download the pdf</a>
+ <a href="resume.pdf" download="IsadoraMuller_resume" title="Click here to download Isadora's Resume">Download the pdf</a>
 </body>
 </html>
