Images and new stuff

--- a/index.html
+++ b/index.html
@@ -14,5 +14,27 @@
  
  <h3> Resume download</h3>
  <a href="resume.pdf" download="IsadoraMuller_resume" title="Click here to download Isadora's Resume">Download the pdf</a>
+ 
+ <div style="background-color:lightcoral;color:white;padding-bottom:20px;">
+ <h2 style="background-color:crimson;padding:10px;"><center>Games that I've worked on</center></H2>
+ <a href="https://pentadventuresdevlog.blogspot.com">
+ <img src="Images/menu.png" alt="Pentadventures" style="width:576px;height:324px;padding-left:20px;" title="Development Blog">
+ </a>
+ <a href="">
+ <img src="" alt="Alchemist Quest" style="width:576px;height:324px;padding-left:20px;" title="Alchemist Quest Video">
+ </a>
+ 
+ 
+ </div>
+ 
+ <footer>
+ <center>
+ <address>
+ <p> Email: <a href="mailto:isamuller2003@gmail.com">isamuller2003@gmail.com</a></p>
+ </address>
+ <p> GitHub: <a href="https://github.com/IsaMuller">https://github.com/IsaMuller</a></p>
+ </center>
+ </footer>
+ 
 </body>
 </html>
