--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
 </head>
 
 <body>
+<header>
 <h1><center>Isadora Luiza Muller</center></h1>
+</header>
 
 <p><center>Welcome to Isadora's Portifolio website. Here you will find all types of information on projects,
  skills and previous work that she has participated in.</center></p>
- 
- 
- <h3> Resume download</h3>
- <a href="resume.pdf" download="IsadoraMuller_resume" title="Click here to download Isadora's Resume">Download the pdf</a>
+  
  
  <div style="background-color:lightcoral;color:white;padding-bottom:20px;">
  <h2 style="background-color:crimson;padding:10px;"><center>Games that I've worked on</center></H2>
@@ -33,6 +32,7 @@
  <p> Email: <a href="mailto:isamuller2003@gmail.com">isamuller2003@gmail.com</a></p>
  </address>
  <p> GitHub: <a href="https://github.com/IsaMuller">https://github.com/IsaMuller</a></p>
+ <p> Resume download: <a href="resume.pdf" download="IsadoraMuller_resume" title="Click here to download Isadora's Resume">Download the pdf</a> </p>
  </center>
  </footer>
  
