--- a/index.html
+++ b/index.html
@@ -10,23 +10,62 @@
 <h1><center>Isadora Luiza Muller</center></h1>
 </header>
 
-<p><center>Welcome to Isadora's Portifolio website. Here you will find all types of information on projects,
- skills and previous work that she has participated in.</center></p>
-  
- 
+<p><center>Welcome to Isadora's Portifolio website. Here you will find all types of information on projects, skills and previous work that she has participated in.</center></p>
+
+
  <div style="background-color:lightcoral;color:white;padding-bottom:20px;">
- <h2 style="background-color:crimson;padding:10px;"><center>Games that I've worked on</center></H2>
+ <h2 style="background-color:crimson;padding:10px;box-sizing:border-box;border-top:1px solid rgba(255,255,255,255);border-bottom:1px solid pink;"><center>Games that I've worked on</center></H2>
+<center>
  <a href="https://pentadventuresdevlog.blogspot.com">
- <img src="Images/menu.png" alt="Pentadventures" style="width:576px;height:324px;padding-left:20px;" title="Development Blog">
+ <img src="Images/menu.png" alt="Pentadventures" style="width:672px;height:378px;padding-right:25px;" title="Development Blog">
  </a>
  <a href="">
- <img src="" alt="Alchemist Quest" style="width:576px;height:324px;padding-left:20px;" title="Alchemist Quest Video">
+ <img src="Images/AlchemistQuest.png" alt="Alchemist Quest" style="width:672px;height:378px;padding-left:25px;" title="Alchemist Quest Video">
  </a>
- 
- 
+</center>
  </div>
- 
- <footer>
+
+ <div style="background-color:lightcoral;color:white;padding-bottom:20px;">
+ <h2 style="background-color:crimson;padding:10px;box-sizing:border-box;border-top:1px solid rgba(255,255,255,255);border-bottom:1px solid pink;"><center>Skills</center></H2>
+
+<div style="float: left;margin-left:100px;">
+<p style="margin-left:30px;font-size:20px;"> Languages</p>
+ <ul style="list-style-type:none;">
+   <li><strong>C++</strong></li>
+   <li>C#</li>
+   <li>HTML</li>
+</ul>
+</div>
+
+<div style="float: left;margin-left:100px;">
+<p style="margin-left:30px;font-size:20px;">Spoken Languages</p>
+<ul style="list-style-type:none;">
+   <li>English (fluent)</li>
+   <li>Portuguese (fluent)</li>
+   <li>Spanish (begginer/intermediate)</li>
+</ul>
+</div>
+
+<br style="background-color:lightcoral;">
+<br style="background-color:lightcoral;">
+<br style="background-color:lightcoral;">
+<br style="background-color:lightcoral;">
+<br style="background-color:lightcoral;">
+<br style="background-color:lightcoral;">
+<br style="background-color:lightcoral;">
+<br style="background-color:lightcoral;">
+ </div>
+
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+
+ <footer style="position:fixed;bottom:0;width:100%;right:0;background-color:pink;">
  <center>
  <address>
  <p> Email: <a href="mailto:isamuller2003@gmail.com">isamuller2003@gmail.com</a></p>
@@ -35,6 +74,6 @@
  <p> Resume download: <a href="resume.pdf" download="IsadoraMuller_resume" title="Click here to download Isadora's Resume">Download the pdf</a> </p>
  </center>
  </footer>
- 
+
 </body>
 </html>
