--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
  <ul style="list-style-type:none;">
    <li><strong>C++</strong></li>
    <li>C#</li>
-   <li>HTML</li>
+   <li>HTML CSS</li>
 </ul>
 </div>
 
-<div style="float: left;margin-left:100px;">
+<div style="float: left;margin-left:50px;">
 <p style="margin-left:30px;font-size:20px;">Spoken Languages</p>
 <ul style="list-style-type:none;">
    <li>English (fluent)</li>
@@ -46,6 +46,36 @@
 </ul>
 </div>
 
+<div style="float: left;margin-left:40px;">
+<p style="margin-left:30px;font-size:20px;">Softwares</p>
+<ul style="list-style-type:none;">
+   <li>Unity</li>
+   <li>Visual Studio 2019</li>
+   <li>Maya</li>
+   <li>GitHub Desktop</li>
+</ul>
+</div>
+
+<div style="float: left;margin-left:50px;">
+<p style="margin-left:30px;font-size:20px;">Rendering APIs</p>
+<ul style="list-style-type:none;">
+   <li>Directx11</li>
+   <li>Gateware</li>
+   <li>FBX</li>
+</ul>
+</div>
+
+<div style="float: left;margin-left:50px;">
+<p style="margin-left:30px;font-size:20px;">Soft Skills</p>
+<ul style="list-style-type:none;">
+   <li>Proactive</li>
+   <li>Problem Solver</li>
+   <li>Logical Thinking</li>
+</ul>
+</div>
+
+<br style="background-color:lightcoral;">
+<br style="background-color:lightcoral;">
 <br style="background-color:lightcoral;">
 <br style="background-color:lightcoral;">
 <br style="background-color:lightcoral;">
