--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
 </head>
 
 <body>
-<header>
-<h1><center>Isadora Luiza Muller</center></h1>
+<header style="position: fixed;top:0;width:100%;right:0;background-color:lavenderblush;box-sizing:border-box;border-bottom:2px solid white;">
+<h1 style="margin-bottom:0px;border-bottom:0px;"><center>Isadora Luiza Muller</center></h1>
+<center>Game Development Graduate from Full Sail University</center>
+<br>
 </header>
-
+<br>
+<br>
+<br>
+<br>
+<br>
 <p><center>Welcome to Isadora's Portifolio website. Here you will find all types of information on projects, skills and previous work that she has participated in.</center></p>
 
 
@@ -17,13 +23,18 @@
  <h2 style="background-color:crimson;padding:10px;box-sizing:border-box;border-top:1px solid rgba(255,255,255,255);border-bottom:1px solid pink;"><center>Games that I've worked on</center></H2>
 <center>
  <a href="https://pentadventuresdevlog.blogspot.com">
- <img src="Images/menu.png" alt="Pentadventures" style="width:672px;height:378px;padding-right:25px;" title="Development Blog">
+ <img src="Images/menu.png" alt="Pentadventures" style="width:672px;height:378px;padding-right:25px;" title="Pentadventures Development Blog">
  </a>
  <a href="">
  <img src="Images/AlchemistQuest.png" alt="Alchemist Quest" style="width:672px;height:378px;padding-left:25px;" title="Alchemist Quest Video">
  </a>
+
+
 </center>
  </div>
+
+
+ <!--- Alchemist Quest Full Playthrough video https://youtu.be/_PfeoA5mdIA  --->
 
  <div style="background-color:lightcoral;color:white;padding-bottom:20px;">
  <h2 style="background-color:crimson;padding:10px;box-sizing:border-box;border-top:1px solid rgba(255,255,255,255);border-bottom:1px solid pink;"><center>Skills</center></H2>
@@ -95,14 +106,18 @@
  <br>
  <br>
 
- <footer style="position:fixed;bottom:0;width:100%;right:0;background-color:pink;">
- <center>
+ <footer style="position:fixed;bottom:0;width:100%;right:0;background-color:lavenderblush;box-sizing:border-box;border-top:2px solid white;">
+<div style="float:left;margin-left:100px;margin-right:50px;">
  <address>
  <p> Email: <a href="mailto:isamuller2003@gmail.com">isamuller2003@gmail.com</a></p>
  </address>
+</div>
+<div style="float:left;margin-left:50px;margin-right:50px;">
  <p> GitHub: <a href="https://github.com/IsaMuller">https://github.com/IsaMuller</a></p>
+</div>
+<div style="float:left;margin-left:50px;margin-right:50px;">
  <p> Resume download: <a href="resume.pdf" download="IsadoraMuller_resume" title="Click here to download Isadora's Resume">Download the pdf</a> </p>
- </center>
+</div>
  </footer>
 
 </body>
