--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
  <h2 style="background-color:crimson;padding:10px;box-sizing:border-box;border-top:1px solid rgba(255,255,255,255);border-bottom:1px solid pink;"><center>Games that I've worked on</center></H2>
 <center>
  <a href="https://pentadventuresdevlog.blogspot.com">
- <img src="Images/menu.png" alt="Pentadventures" style="width:672px;height:378px;padding-right:25px;" title="Pentadventures Development Blog">
+ <img src="Images/menu.PNG" alt="Pentadventures" style="width:672px;height:378px;padding-right:25px;" title="Pentadventures Development Blog">
  </a>
  <a href="">
- <img src="Images/AlchemistQuest.png" alt="Alchemist Quest" style="width:672px;height:378px;padding-left:25px;" title="Alchemist Quest Video">
+ <img src="Images/AlchemistQuest.PNG" alt="Alchemist Quest" style="width:672px;height:378px;padding-left:25px;" title="Alchemist Quest Video">
  </a>
 
 
