--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 <div class="skillList">
 <p class="listTiles">Spoken Languages</p>
 <ul class="listings">
-   <li>English (fluent)</li>
-   <li>Portuguese (fluent)</li>
-   <li>Spanish (begginer/intermediate)</li>
+   <li>English <span>(fluent)</span></li>
+   <li>Portuguese <span>(fluent)</span></li>
+   <li>Spanish <span>(begginer/intermediate)</span></li>
 </ul>
 </div>
 
