--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
 </head>
 
 <body>
-<header style="position: fixed;top:0;width:100%;right:0;background-color:lavenderblush;box-sizing:border-box;border-bottom:2px solid white;">
+<header>
+<div>
+<a id="home" href="index.html">HOME</a>
+</div>
+<div id="topText">
 <h1 style="margin-bottom:0px;border-bottom:0px;"><center>Isadora Luiza Muller</center></h1>
 <center>Game Development Graduate from Full Sail University</center>
+</div>
 <br>
 </header>
 <br>
