--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-<link rel="stylesheet" href="css/stylesheet.css">
+<link rel="stylesheet" href="css/homePageStyle.css">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
  <div  class="infoBox">
  <h2 class="infoBox-title"><center>Games that I've worked on</center></H2>
 <div id="gamesImages">
- <a class="game" href="https://pentadventuresdevlog.blogspot.com">
+ <a class="game" href="pentaPage.html">
  <img class="imageLink" src="img/menu.PNG" alt="Pentadventures" title="Pentadventures Development Blog">
  </a>
  <a class="game" href="https://youtu.be/kD0V8J13UfY">
