--- a/pentaPage.html
+++ b/pentaPage.html
@@ -31,10 +31,11 @@
 
 <p>A hex-grid turn-based exploration and combat game, where you take characters into your party to explore the world and fight monsters to survive.</p>
 
- <a class="game" href="https://pentadventuresdevlog.blogspot.com">Development Blog</a>
+ <a class="game" href="https://pentadventuresdevlog.blogspot.com/search/label/Isadora">Development Blog</a>
+<a class="game" href="https://github.com/fullsaildevelopment/2109_GDBS_GoliathOwl_Pentadventures">GitHub<sub>(temporarely privated)</sub></a>
 
 </div>
-<div class="pentaInfo">
+<div class="pentaInfoResponsa">
 <h3> Responsabilities </h3>
 
 <h4>Gameplay</h4>
