--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
  <a class="game" href="pentaPage.html">
  <img class="imageLink" src="img/menu.PNG" alt="Pentadventures" title="Pentadventures Development Blog">
  </a>
- <a class="game" href="https://youtu.be/kD0V8J13UfY">
+ <a class="game" href="alchemistPage.html">
  <img class="imageLink" src="img/AlchemistQuest.PNG" alt="Alchemist Quest" title="Alchemist Quest Video">
  </a>
 
