--- a/pentaPage.html
+++ b/pentaPage.html
@@ -60,7 +60,7 @@
   <p> GitHub: <a class="bnt" href="https://github.com/IsaMuller">https://github.com/IsaMuller</a></p>
   </div>
   <div class="footerContent">
-  <a class="resumeBnt" href="resume.pdf" download="IsadoraMuller_resume" title="Click here to download Isadora's Resume">Resume download</a>
+  <a class="resumeBnt" href="resume.pdf" download="IsadoraMuller_resume" title="Click here to download Isadora's Resume">Download Resume</a>
   </div>
   </div>
   </footer>
