--- a/index.html
+++ b/index.html
@@ -33,11 +33,28 @@
  <a class="game" href="alchemistPage.html">
  <img class="imageLink" src="img/AlchemistQuest.PNG" alt="Alchemist Quest" title="Alchemist Quest Video">
  </a>
-
-
 </div>
- </div>
 
+
+ </div>
+ <div  class="infoBox">
+ <h2 class="infoBox-title"><center>Industry Techniques</center></H2>
+ <div id="industryTechniques">
+   <p>Frustum Culling Recognition Simulation</p>
+   <p>Sorted and Flagged Pools Simulation to learn about particle systems</p>
+   <p>Specular Lighting</p>
+ <img class="gifs" src="img/frustumculling.gif" alt="Gif showing a frustum culling simulation" title="Frustum Culling Recognition Simulation">
+ <img class="gifs" src="img/pools.gif" alt="Gif showing a particle system simulation" title="Sorted and Flagged Pools Simulation to learn about particle systems">
+ <img class="gifs" src="img/Specular.PNG" alt="Balloons shining with specular lighting" title="Specular Lighting">
+
+ <p>FBX Model Loading with multiple textures and emissive lighing</p>
+ <p>Displaying Overlay Wireframe and ignoring pixels with alpha 0</p>
+ <p>Alpha Blending</p>
+ <img class="gifs" src="img/modelLoading.PNG" alt="Character with shining stones on her shoulder" title="FBX Model Loading with multiple textures and emissive lighing">
+ <img class="gifs" src="img/Capture1.PNG" alt="Boxes and Grass models with vertex debug lines" title="Texturing models with alpha values">
+ <img class="gifs" src="img/alphablending.PNG" alt="Box model partially transparent" title="Alpha Blending">
+ </div>
+</div>
 
  <!--- Alchemist Quest Full Playthrough video https://youtu.be/_PfeoA5mdIA  --->
 
@@ -102,7 +119,7 @@
  <br>
  <br>
 
- <footer style="position:fixed;bottom:0;width:100%;right:0;background-color:lavenderblush;box-sizing:border-box;border-top:2px solid white;">
+ <footer style="position:fixed;bottom:0;width:100%;right:0;background-color: rgb(210, 195, 215);box-sizing:border-box;border-top:2px solid white;">
 <div class="footer-block">
 <div class="footerContent">
  <address>
