--- a/alchemistPage.html
+++ b/alchemistPage.html
@@ -49,7 +49,7 @@
 
 </div>
 
-  <footer style="position:fixed;bottom:0;width:100%;right:0;background-color:lavenderblush;box-sizing:border-box;border-top:2px solid white;">
+  <footer style="position:fixed;bottom:0;width:100%;right:0;background-color:rgb(210, 195, 215);box-sizing:border-box;border-top:2px solid white;">
   <div class="footer-block">
   <div class="footerContent">
   <address>
