--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
  <p>FBX Model Loading with multiple textures and emissive lighing</p>
  <p>Displaying Overlay Wireframe and ignoring pixels with alpha 0</p>
  <p>Alpha Blending</p>
- <img class="gifs" src="img/modelLoading.PNG" alt="Character with shining stones on her shoulder" title="FBX Model Loading with multiple textures and emissive lighing">
+ <img class="gifs" src="img/modelLoading.png" alt="Character with shining stones on her shoulder" title="FBX Model Loading with multiple textures and emissive lighing">
  <img class="gifs" src="img/Capture1.PNG" alt="Boxes and Grass models with vertex debug lines" title="Texturing models with alpha values">
- <img class="gifs" src="img/alphablending.PNG" alt="Box model partially transparent" title="Alpha Blending">
+ <img class="gifs" src="img/alphablending.png" alt="Box model partially transparent" title="Alpha Blending">
  </div>
 </div>
 
