--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <br>
 <br>
 <br>
-<p><center>Welcome to Isadora's Portifolio website. Here you will find all types of information on projects, skills and previous work that she has participated in.</center></p>
+<p><center>Welcome to my Portifolio website. Here you will find all types of information on projects, skills and previous work that I have participated in.</center></p>
 
 
  <div  class="infoBox">
