--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
 <br>
 <br>
 <br>
-<p><center>Welcome to my Portifolio website. Here you will find all types of information on projects, skills and previous work that I have participated in.</center></p>
-
+<center class="intro">
+<p class="intro2">Welcome to my Portifolio website. Here you will find all types of information on projects, skills and previous work that I have participated in.</p>
+<p class="intro2">This website itself was made by me from scratch, using HTML, CSS and github's website domain. I will be working on it to make it look nicer and updated as the time passes.</p>
+<p class="intro2">Here you can check out the games that I have worked on, either them being school projects or just personal doings. The images are clickable and lead to a page with more specifics about them. I will be adding a link so they are either downloadable or playable online so you can check it out in the future.</p>
+</center>
 
  <div  class="infoBox">
  <h2 class="infoBox-title"><center>Games that I've worked on</center></H2>
@@ -36,8 +39,12 @@
 </div>
 
 
+
  </div>
  <div  class="infoBox">
+   <center>
+   <!-- <p class="intro2">In this section there are some of the techniques that I learned during my time in college and studying on my own.</p> -->
+   </center>
  <h2 class="infoBox-title"><center>Industry Techniques</center></H2>
  <div id="industryTechniques">
    <p>Frustum Culling Recognition Simulation</p>
@@ -93,7 +100,13 @@
 <p class="listTiles">Rendering APIs</p>
 <ul class="listings">
    <li>Directx11</li>
+   <li></li>
+   <li></li>
+</ul>
+<p class="listTiles">Rendering SDKs</p>
+<ul class="listings">
    <li>Gateware</li>
+   <li></li>
    <li></li>
 </ul>
 </div>
