--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <br>
 <center class="intro">
 <p class="intro2">Welcome to my Portifolio website. Here you will find all types of information on projects, skills and previous work that I have participated in.</p>
-<p class="intro2">This website itself was made by me from scratch, using HTML, CSS and github's website domain. I will be working on it to make it look nicer and updated as the time passes.</p>
-<p class="intro2">Here you can check out the games that I have worked on, either them being school projects or just personal doings. The images are clickable and lead to a page with more specifics about them. I will be adding a link so they are either downloadable or playable online so you can check it out in the future.</p>
+<p class="intro2">This website itself was made by me from scratch, using HTML, CSS and github's website domain. I will be working on it to make it look nicer and updated as the time passes and I learn more.</p>
+<p class="intro2">Here you can check out the games that I have worked on, either them being school projects or just personal doings. The images are clickable and lead to a page with more specifics about each game. I will be adding a link so they are either downloadable or playable online so you can check it out in the future.</p>
 </center>
 
  <div  class="infoBox">
